[package]
name = "piecetable"
version = "0.2.0"
authors = ["Martin Atria Paublo <maratripa@gmail.com>"]
description = "Simple piece table lib"
edition = "2021"
license = "MIT"
homepage = "https://github.com/Maratripa/piece-table"
repository = "https://github.com/Maratripa/piece-table"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
